--- a/app/view/index.html
+++ b/app/view/index.html
@@ -4,20 +4,23 @@
     <div class="tpl-portlet-components">
         <div class="tpl-block">
             <div class="am-g">
-                 
-                    <div class="am-btn-toolbar">
-                        <div class="am-btn-group am-btn-group-xs">
-                            <a id="add-image" type="button" class="am-btn am-btn-default am-btn-success">
+
+                <div class="am-btn-toolbar">
+                    <div class="am-btn-group am-btn-group-xs">
+                        <a id="add-image" type="button" class="am-btn am-btn-default am-btn-success">
                                 <span class="am-icon-plus"></span> New Photo</a>
-                            <a id="eidt-album" type="button" class="am-btn am-btn-default am-btn-warning">
+                        <a id="eidt-album" type="button" class="am-btn am-btn-default am-btn-warning">
                                 <span class="am-icon-edit"></span> Edit Album</a>
-                            <a id="delete-album" type="button" class="am-btn am-btn-default am-btn-danger">
+                        <a id="delete-album" type="button" class="am-btn am-btn-default am-btn-danger">
                                 <span class="am-icon-recycle"></span> Delete Album</a>
-                            <a id="show-album" type="button" class="am-btn am-btn-default am-btn-secondary">
+                        <a id="show-album" type="button" class="am-btn am-btn-default am-btn-secondary">
                                 <span class="am-icon-tv"></span> Show Album</a>
-                        </div>
+                        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" style="margin-top:-12px;"
+                         width=298 height=52 src="{{album.music_link}}"></iframe>
                     </div>
-               
+
+                </div>
+
 
             </div>
             <div class="am-g">
@@ -89,6 +92,8 @@
         var album_id = urlUtil.getQueryValue('album_id');
 
         $('#add-image')[0].setAttribute('href', '/index/add?album_id=' + album_id);
+        $('#eidt-album')[0].setAttribute('href', '/index/albumEdit?album_id=' + album_id);
+        $('#delete-album').click(function () { deleteAlbum(album_id) });
 
     })(document);
 
@@ -99,6 +104,21 @@
                 var data = JSON.parse(res);
                 if (data.ok) {
                     window.location = window.location;
+                } else {
+                    alert(data.result);
+                }
+
+            });
+        }
+    }
+
+    function deleteAlbum(id) {
+        var ok = confirm("确认删除？");
+        if (ok) {
+            $.get('/index/albumDelete?album_id=' + id, function (res) {
+                var data = JSON.parse(res);
+                if (data.ok) {
+                    window.location = '/index/index?album_id=' + data.result;
                 } else {
                     alert(data.result);
                 }
