--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -52,8 +52,11 @@
                              <img src="/app/assets/img/user01.png ">
                           </span>
                     </a>
+                    <ul class="am-dropdown-content">
+                        <li><a href="/index/userEdit"><span class="am-icon-cog"></span> Setting</a></li>
+                        <li><a href="/login/logout"><span class="am-icon-power-off"></span> Logout</a></li>
+                    </ul>
                 </li>
-                <li><a href="/login/logout" class="tpl-header-list-link "><span class="am-icon-sign-out tpl-header-list-ico-out-size "></span></a></li>
             </ul>
         </div>
     </header>
