--- a/app/view/user-edit.html
+++ b/app/view/user-edit.html
@@ -11,7 +11,7 @@
                             <div class="am-u-sm-9">
                                 <div class="am-form-group am-form-file">
                                     <div class="tpl-form-file-img">
-                                        <img id="img-preview" src="{{user.pic}}" alt="">
+                                        <img id="img-preview" src="{{user.image_path}}" alt="">
                                     </div>
                                     <button type="button" class="am-btn am-btn-danger am-btn-sm">
                                             <i class="am-icon-cloud-upload"></i> Change Avatar</button>
@@ -27,8 +27,12 @@
                                 />
                             </div>
                         </div>
-                       
                         <input type="text" name="user_id" value="{{user.id}}" style="display:none"/>
+                         <div class="am-form-group">
+                            <div class="am-u-sm-9 am-u-sm-push-3">
+                                <input type="submit" class="am-btn am-btn-primary tpl-btn-bg-color-success"></input>
+                            </div>
+                        </div>
                     </form>
 
                 </div>
