change user edit

--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -47,9 +47,9 @@
 
                 <li class="am-dropdown " data-am-dropdown data-am-dropdown-toggle>
                     <a class="am-dropdown-toggle tpl-header-list-link " href="javascript:; ">
-                        <span class="tpl-header-list-user-nick ">{{user_name}}</span>
+                        <span class="tpl-header-list-user-nick ">{{user.name}}</span>
                         <span class="tpl-header-list-user-ico ">
-                             <img src="/app/assets/img/user01.png ">
+                             <img src="{{user.avatar}}">
                           </span>
                     </a>
                     <ul class="am-dropdown-content">
