--- a/app/view/user-edit.html
+++ b/app/view/user-edit.html
@@ -11,7 +11,7 @@
                             <div class="am-u-sm-9">
                                 <div class="am-form-group am-form-file">
                                     <div class="tpl-form-file-img">
-                                        <img id="img-preview" src="{{user.image_path}}" alt="">
+                                        <img id="img-preview" src="{{user.avatar}}" alt="">
                                     </div>
                                     <button type="button" class="am-btn am-btn-danger am-btn-sm">
                                             <i class="am-icon-cloud-upload"></i> Change Avatar</button>
