add image photo

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -33,7 +33,7 @@
                             <a href="javascript:;" class="tpl-table-images-content-i">
                                 <div class="tpl-table-images-content-i-info">
                                     <span class="ico">
-                                    <img src="/app/assets/img/user01.png" alt="">Publisher
+                                    <img src="{{image.avatar}}" alt="">{{image.username}}
                                  </span>
 
                                 </div>
