--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1992,6 +1992,18 @@ ul.tpl-dropdown-content li>a.tpl-dropdown-content-message:last-child {
     margin-bottom: 40px;
 }
 
+.album-users{
+    float: left;
+}
+
+.album-users img{
+    width:30px;
+    height:30px; 
+    margin-left:10px;
+    margin-top:-5px;
+    border-radius:15px;
+}
+
 
 @media screen and (max-width: 1000px) {
     .tpl-left-nav-hover {
