--- a/app/view/layout-main.html
+++ b/app/view/layout-main.html
@@ -29,7 +29,7 @@
                     <img src="/app/assets/img/moon_72px_1206584_easyicon.net.png">
                 </span>
                 <span>
-                     AAAAAA
+                     Kinds Play
                 </span>
             </a>
 
@@ -39,7 +39,7 @@
         </div>
 
         <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only
-        " data-am-collapse="{target: '#topbar-collapse'} "><span class="am-sr-only ">导航切换</span> <span class="am-icon-bars "></span></button>
+        " data-am-collapse="{target: '#topbar-collapse'} "><span class="am-sr-only ">Nav Change</span> <span class="am-icon-bars "></span></button>
 
         <div class="am-collapse am-topbar-collapse " id="topbar-collapse ">
 
