--- a/app/view/album-edit.html
+++ b/app/view/album-edit.html
@@ -7,15 +7,15 @@
                 <div class="tpl-form-body tpl-form-line">
                     <form action="/index/albumUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
                         <div class="am-form-group">
-                            <label for="user-email" class="am-u-sm-3 am-form-label">Gallery Name</label>
+                            <label for="user-email" class="am-u-sm-3 am-form-label">Album Name</label>
                             <div class="am-u-sm-9">
-                                <input type="text" id="gallery-name" name="gallery-name" class="tpl-form-input" placeholder="please input the gallery name"
+                                <input type="text" id="gallery-name" name="gallery-name" class="tpl-form-input" placeholder="please input the album name"
                                 value="{{album.name}}"
                                 />
                             </div>
                         </div>
                         <div class="am-form-group">
-                            <label for="user-email" class="am-u-sm-3 am-form-label">Gallery Music Link</label>
+                            <label for="user-email" class="am-u-sm-3 am-form-label">Album Music Link</label>
                             <div class="am-u-sm-9">
                                 <input type="text" id="gallery-name" name="music-link" class="tpl-form-input" placeholder="please input the 163 music link"
                                  value="{{album.music_link}}" />
