--- a/app/view/login.html
+++ b/app/view/login.html
@@ -22,7 +22,7 @@
                     </div>
                     <p><button type="submit" class="am-btn am-btn-default">Login</button></p>
                     <div class="am-form-group">
-                        <a href="/login/register">Regeist</a>
+                        <a href="/login/register">Register</a>
                     </div>
                 </fieldset>
             </form>
