--- a/app/view/index-add.html
+++ b/app/view/index-add.html
@@ -11,7 +11,7 @@
                             <div class="am-u-sm-9">
                                 <div class="am-form-group am-form-file">
                                     <div class="tpl-form-file-img">
-                                        <img id="img-preview" src="/app/assets/img/image_1876px_1202980_easyicon.net.png" alt="">
+                                        <img id="img-preview"  name="img-preview" src="/app/assets/img/image_1876px_1202980_easyicon.net.png" alt="">
                                     </div>
                                     <button type="button" class="am-btn am-btn-danger am-btn-sm">
                                             <i class="am-icon-cloud-upload"></i> Add Photo</button>
