change to email check

--- a/app/view/login.html
+++ b/app/view/login.html
@@ -15,7 +15,7 @@
             <form class="am-form" action="/login/login" method="post">
                 <fieldset>
                     <div class="am-form-group">
-                        <input type="text" name="name" class="" id="doc-ipt-email-1" placeholder="Please input your username">
+                        <input type="text" name="email" class="" id="doc-ipt-email-1" placeholder="Please input your EMAIL">
                     </div>
                     <div class="am-form-group">
                         <input type="password" name="password" class="" id="doc-ipt-pwd-1" placeholder="Please input your password">
@@ -23,6 +23,8 @@
                     <p><button type="submit" class="am-btn am-btn-default">Login</button></p>
                     <div class="am-form-group">
                         <a href="/login/register">Register</a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="/login/forgetPassword">Forget password</a>
                     </div>
                 </fieldset>
             </form>
