--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,26 +7,28 @@
 
                 <div class="am-btn-toolbar">
                     <div class="am-btn-group am-btn-group-xs">
-                        <a id="add-image" type="button" class="am-btn am-btn-default am-btn-success">
+                        <a id="add-image" type="button" class="am-btn am-btn-default am-round am-btn-success">
                             <span class="am-icon-plus"></span> New Photo</a>
-                        <a id="eidt-album" type="button" class="am-btn am-btn-default am-btn-warning">
+                        <a id="eidt-album" type="button" class="am-btn am-btn-default am-round am-btn-warning">
                             <span class="am-icon-edit"></span> Edit Album</a>
-                        <a id="delete-album" type="button" class="am-btn am-btn-default am-btn-danger">
+                        <a id="delete-album" type="button" class="am-btn am-btn-default am-round am-btn-danger">
                             <span class="am-icon-recycle"></span> Delete Album</a>
-                        <a id="show-album" type="button" class="am-btn am-btn-default am-btn-secondary">
+                        <a id="show-album" type="button" class="am-btn am-btn-default am-round am-btn-secondary">
 
                             <span class="am-icon-tv"></span> Show Album</a>
 
                         <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" style="margin-top:-12px;float:left;" width=298 height=52
                             src="{{album.music_link}}"></iframe>
 
-                        <a id="edit-musiclink" class="am-btn">
-                            <span class="am-icon-edit"></span></a> {% for user in albumUsers%}
+                        <a id="edit-musiclink" class="am-btn am-round am-btn-warning">
+                            <span class="am-icon-edit"></span> Edit Music</a> {% for user in albumUsers%}
 
                         <div class="album-users">
                             <img src="{{user.avatar}}"> {{user.name}}
                         </div>
                         {% endfor %}
+                        <a id="share-album" class="am-btn am-round am-btn-success album-users-share">
+                            <span class="am-icon-share"></span> Share Album</a>
                     </div>
 
                 </div>
@@ -106,6 +108,8 @@
         $('#eidt-album')[0].setAttribute('href', '/index/albumEdit?album_id=' + album_id);
         $('#delete-album').click(function () { deleteAlbum(album_id) });
         $('#edit-musiclink')[0].setAttribute('href', '/index/albumEdit?album_id=' + album_id);
+        $('#share-album')[0].setAttribute('href', '/index/albumShare?album_id=' + album_id);
+
     })(document);
 
     function deleteImage(id) {
