split index.php

--- a/app/view/album-share.html
+++ b/app/view/album-share.html
@@ -5,7 +5,7 @@
         <div class="tpl-block">
             <div class="am-g">
                 <div class="tpl-form-body tpl-form-line">
-                    <form action="/index/albumShareUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
+                    <form action="/album/albumShareUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
                         
                         <div class="am-form-group">
                             <label for="user-email" class="am-u-sm-3 am-form-label">Share to user email</label>
