--- a/app/view/user-edit.html
+++ b/app/view/user-edit.html
@@ -5,7 +5,7 @@
         <div class="tpl-block">
             <div class="am-g">
                 <div class="tpl-form-body tpl-form-line">
-                    <form action="/index/userUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
+                    <form action="/user/userUpdate" method="post" enctype="multipart/form-data" class="am-form tpl-form-line-form">
                      <div class="am-form-group">
                             <label for="user-weibo" class="am-u-sm-3 am-form-label">Avatar</label>
                             <div class="am-u-sm-9">
