--- a/app/view/album-share-email.html
+++ b/app/view/album-share-email.html
@@ -1,1 +1,8 @@
-<h1>{$name}</h1>
+<h1>{name} share an album to you</h1>
+<div>Album Name : &nbsp;AAAAA</div>
+<div>Album Pictures:</div>
+<div>1111 &nbsp; &nbsp; 1111 &nbsp; &nbsp; &nbsp;1111&nbsp;</div>
+<div><br /></div>
+<div>Login</div>
+<div>Register</div>
+<div><br /></div>
